fixbug ECM-2702 Set align for 'Any Permission' label in 'Select member' form in Mac skin

--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/MacStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/MacStylesheet.css
@@ -644,7 +644,6 @@
   width: 100%;
 }
 
-
 .UIJCRExplorerPortlet .UIPermissionManager .UIPermissionInfo {
   padding-bottom: 8px;
 }
@@ -791,6 +790,15 @@
 .UIJCRExplorerPortlet .UIGroupMembershipSelector .UIAnyPermission .UIFormWithTitle .UIFormGrid td {	
 	vertical-align: middle;
 	padding: 2px;
+}
+
+.UIJCRExplorerPortlet .UIAnyPermission .UIFormWithTitle .HorizontalLayout .FormContainer {
+	padding: 0px;
+	width: auto;
+}
+
+.UIJCRExplorerPortlet .UIAnyPermission .HorizontalLayout .UIFormGrid .FieldLabel {
+	width: 108px;
 }
 
 /*====================================UIActionManager==================================*/
